<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- titulo principal de la pagina -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/tarea_titulo"
        android:textStyle="bold" />

    <!-- separador de vistas -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- NUMERO DE SOLICITUD ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_numeroSolicitud"
        android:textStyle="bold" />

    <!-- NUMERO DE SOLICITUD CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_numeroSolicitud"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- CODIGO DE PERSONA ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_persona"
        android:textStyle="bold" />

    <!-- CODIGO DE PERSONA CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_codigoPersona"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- guion de separacion de campos compuestos -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador" />

    <!-- NOMBRE DE PERSONA CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_nombrePersona"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- FECHA DE INICIO DE SOLICITUD ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_iniciado"
        android:textStyle="bold" />

    <!-- FECHA DE INICIO DE SOLICITUD CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_iniciado"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- CODIGO DE SOLICITUD DE REFERENCIA ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_referencia"
        android:textStyle="bold" />

    <!-- CODIGO DE SOLICITUD DE REFERENCIA CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_referencia"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- TIPO DE SOLICITUD ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_tipoSolicitud"
        android:textStyle="bold" />

    <!-- TIPO DE SOLICITUD CODIGO CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_tipoSolicitudCodigo"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- guion de separacion de campos compuestos -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador" />

    <!-- TIPO DE SOLICITUD DESCRIPCION CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_tipoSolicitudDescripcion"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- separador de vistas -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- subtitulo detalles de tarea -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/tarea_detalleTarea"
        android:textStyle="bold" />

    <!-- NUMERO DE TAREA ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_numeroTarea"
        android:textStyle="bold" />

    <!-- NUMERO DE TAREA CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_numeroTarea"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- TIPO DE TAREA ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_tipoTarea"
        android:textStyle="bold" />

    <!-- TIPO DE TAREA CODIGO CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_tipoTareaCodigo"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- guion de separacion de campos compuestos -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador" />

    <!-- TIPO DE TAREA DESCRIPCION CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_tipoTareaDescripcion"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- FECHA DE ASIGNACION ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_fechaAsignado"
        android:textStyle="bold" />

    <!-- FECHA DE ASIGNACION CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_fechaAsignado"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- USUARIO ASINGADOR DE LA TAREA ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_usuarioAsigador"
        android:textStyle="bold" />

    <!-- USUARIO ASIGNADOR CODIGO CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_usuarioAsignadorCodigo"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- guion de separacion de campos compuestos -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador" />

    <!-- USUARIO ASIGNADOR NOMBRE CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_usuarioAsignadorNombre"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />

    <!-- DESCRIPCION DE LA TAREA ETIQUETA -->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_descripcion"
        android:textStyle="bold" />

    <!-- DESCRIPCION DE LA TAREA CAMPO MODIFICABLE -->
    <TextView
        android:id="@+id/tarea_descripcion"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <!-- ESTADO DE LA TAREA ETIQUETA -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_estadoTarea"
            android:textStyle="bold" />

        <!-- ESTADO DE LA TAREA SELECCION ITEM -->
        <Spinner
            android:id="@+id/spinner_estadoTarea"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_estado_tarea" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <!-- COMENTARION DE LA RECEPCION ETIQUETA -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_comentarioRecibido"
            android:textStyle="bold" />

        <!-- COMENTARIO DE LA RECEPCION CAMPO MODIFICABLE POR USUARIO -->
        <EditText
            android:id="@+id/tarea_comentarioRecepcion"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp">

        <!-- COMENTARIO ADICIONAL ETIQUETA -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_comentarioAdicional"
            android:textStyle="bold" />

        <!-- COMENTARIO ADICIONAL CAMPO MODIFICABLE POR USUARIO -->
        <EditText
            android:id="@+id/tarea_comentarioAdicional"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <!-- BOTON DE CANCELAR -->
        <Button
            android:id="@+id/botonAprobacionTarea1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_boton_1" />

        <!-- BOTON DE RECHAZADO -->
        <Button
            android:id="@+id/botonAprobacionTarea2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_boton_2" />

        <!-- BOTON DE APROBADO -->
        <Button
            android:id="@+id/botonAprobacionTarea3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_boton_3" />
    </LinearLayout>


</LinearLayout>
